--- a/locales/en_US.json
+++ b/locales/en_US.json
@@ -59,5 +59,5 @@
     "output_format_label": "Output Format:",
     "error_no_io_folders": "Please select input and output folders.",
     "conversion_success": "Conversion completed successfully.",
-    "jpeg_quality_label": "JPEG Quality:"
+    "jpeg_quality_label": "JPEG Quality:",
 }
