Update localization and configuration for multi-language support
- Changed default language in config.json from English to Simplified Chinese (zh_CN).
- Added new binary executable for VideoConverter.
- Updated dist/config.json to reflect the new language setting.
- Modified image_tool.py to correctly reference the locales directory.
- Enhanced German (de_DE), English (en_US), French (fr_FR), Italian (it_IT), and Simplified Chinese (zh_CN) locale files with additional error messages and conversion status messages.
- Adjusted main.py to ensure correct path for locales directory.
- Created main.spec for packaging with updated data paths.
- Updated video_tool.py to handle language loading and UI text based on selected language.

--- a/locales/en_US.json
+++ b/locales/en_US.json
@@ -36,28 +36,28 @@
     "no_video_files_msg": "No video files found in directory: ",
     "conversion_start": "Searching for video files...",
     "conversion_start_log": "Starting to scan video files...",
-    "video_files_found": "Found {video_files_count} video files",
-    "using_threads": "Using {thread_count} threads for conversion",
-    "target_format": "Target Format: {target_format}",
-    "output_directory": "Output Directory: {output_directory}",
+    "video_files_found": "Found {} video files",
+    "using_threads": "Using {} threads for conversion",
+    "target_format": "Target Format: {}",
+    "output_directory": "Output Directory: {}",
     "converting": "Converting...",
     "conversion_complete": "Conversion completed",
-    "conversion_complete_msg": "Conversion completed! Processed {total_files} files, {success_files} succeeded, {failed_files} failed.",
+    "conversion_complete_msg": "Conversion completed! Processed {} files, {} succeeded, {} failed.",
     "conversion_failed": "Conversion failed",
     "conversion_failed_msg": "An error occurred during conversion: ",
-    "file_conversion_start": "Starting conversion: {file_path}",
-    "file_conversion_success": "Success: {file_path}",
-    "file_conversion_error": "Error: Error processing {file_path} - {error_msg}",
-    "file_conversion_skip": "Skipping: {file_path} already exists",
-    "file_not_found": "Error: {file_path} is not a valid file",
-    "unknown_error": "Unknown error: An exception occurred while converting {file_path} - {error_msg}",
+    "file_conversion_start": "Starting conversion: {}",
+    "file_conversion_success": "Success: {}",
+    "file_conversion_error": "Error: Error processing {} - {}",
+    "file_conversion_skip": "Skipping: {} already exists",
+    "file_not_found": "Error: {} is not a valid file",
+    "unknown_error": "Unknown error: An exception occurred while converting {} - {}",
     "conversion_finished_title": "Completed",
-    "conversion_finished_msg": "Conversion completed!\nSuccess: {success_files}\nFailed: {failed_files}",
-    "set_output_folder": "Automatically set output folder to: {output_folder}",
+    "conversion_finished_msg": "Conversion completed!\nSuccess: {}\nFailed: {}",
+    "set_output_folder": "Automatically set output folder to: {}",
     "convert_button": "Convert",
     "input_format_label": "Input Format:",
     "output_format_label": "Output Format:",
     "error_no_io_folders": "Please select input and output folders.",
     "conversion_success": "Conversion completed successfully.",
-    "jpeg_quality_label": "JPEG Quality:",
+    "jpeg_quality_label": "JPEG Quality:"
 }
