--- a/locales/it_IT.json
+++ b/locales/it_IT.json
@@ -31,5 +31,36 @@
     "error_create_output_folder": "Errore",
     "error_create_output_folder_msg": "Impossibile creare la cartella di output: ",
     "error_ffmpeg": "Errore",
+    "error_ffmpeg_msg": "Impossibile eseguire FFmpeg: ",
+    "no_video_files": "Nessun file video trovato",
+    "no_video_files_msg": "Nessun file video trovato nella directory: ",
+    "conversion_start": "Ricerca di file video...",
+    "conversion_start_log": "Inizio scansione file video...",
+    "video_files_found": "Trovati {} file video",
+    "using_threads": "Utilizzo di {} thread per la conversione",
+    "target_format": "Formato Target: {}",
+    "output_directory": "Cartella di Output: {}",
+    "converting": "Conversione in corso...",
+    "conversion_complete": "Conversione completata",
+    "conversion_complete_msg": "Conversione completata! Processati {} file, {} riusciti, {} falliti.",
+    "conversion_failed": "Conversione fallita",
+    "conversion_failed_msg": "Si è verificato un errore durante la conversione: ",
+    "file_conversion_start": "Avvio conversione: {}",
+    "file_conversion_success": "Successo: {}",
+    "file_conversion_error": "Errore: Errore durante l'elaborazione di {} - {}",
+    "file_conversion_skip": "Salto: {} già esistente",
+    "file_not_found": "Errore: {} non è un file valido",
+    "unknown_error": "Errore sconosciuto: Si è verificata un'eccezione durante la conversione di {} - {}",
+    "conversion_finished_title": "Completato",
+    "conversion_finished_msg": "Conversione completata!\nSuccesso: {}\nFalliti: {}",
+    "set_output_folder": "Cartella di output impostata automaticamente su: {}",
+    "convert_button": "Converti",
+    "input_format_label": "Formato di Input:",
+    "output_format_label": "Formato di Output:",
+    "error_no_io_folders": "Per favore, seleziona le cartelle di input e output.",
+    "conversion_success": "Conversione completata con successo.",
+    "jpeg_quality_label": "Qualità JPEG:"
+    "error_create_output_folder_msg": "Impossibile creare la cartella di output: ",
+    "error_ffmpeg": "Errore",
     "language": "Italiano"
 }
