--- a/locales/de_DE.json
+++ b/locales/de_DE.json
@@ -29,6 +29,37 @@
     "error_no_output_folder": "Fehler",
     "error_no_output_folder_msg": "Bitte wählen Sie ein Ausgabeverzeichnis aus.",
     "error_create_output_folder": "Fehler",
+    "error_create_output_folder_msg": "Konnte das Ausgabeverzeichnis nicht erstellen: ",
+    "error_ffmpeg": "Fehler",
+    "error_ffmpeg_msg": "Konnte FFmpeg nicht ausführen: ",
+    "no_video_files": "Keine Videodateien gefunden",
+    "no_video_files_msg": "Keine Videodateien im Verzeichnis gefunden: ",
+    "conversion_start": "Suche nach Videodateien...",
+    "conversion_start_log": "Beginn der Videodateien-Suche...",
+    "video_files_found": "{} Videodateien gefunden",
+    "using_threads": "Verwende {} Threads für die Konvertierung",
+    "target_format": "Zielformat: {}",
+    "output_directory": "Ausgabeverzeichnis: {}",
+    "converting": "Konvertiere...",
+    "conversion_complete": "Konvertierung abgeschlossen",
+    "conversion_complete_msg": "Konvertierung abgeschlossen! {} Dateien verarbeitet, {} erfolgreich, {} fehlgeschlagen.",
+    "conversion_failed": "Konvertierung fehlgeschlagen",
+    "conversion_failed_msg": "Ein Fehler ist während der Konvertierung aufgetreten: ",
+    "file_conversion_start": "Konvertierung starten: {}",
+    "file_conversion_success": "Erfolg: {}",
+    "file_conversion_error": "Fehler: Fehler beim Verarbeiten von {} - {}",
+    "file_conversion_skip": "Überspringe: {} existiert bereits",
+    "file_not_found": "Fehler: {} ist keine gültige Datei",
+    "unknown_error": "Unbekannter Fehler: Eine Ausnahme ist während der Konvertierung von {} - {} aufgetreten",
+    "conversion_finished_title": "Abgeschlossen",
+    "conversion_finished_msg": "Konvertierung abgeschlossen!\nErfolgreich: {}\nFehlgeschlagen: {}",
+    "set_output_folder": "Ausgabeverzeichnis automatisch auf {} festgelegt",
+    "convert_button": "Konvertieren",
+    "input_format_label": "Eingabeformat:",
+    "output_format_label": "Ausgabeformat:",
+    "error_no_io_folders": "Bitte wählen Sie Eingabe- und Ausgabeverzeichnisse aus.",
+    "conversion_success": "Konvertierung erfolgreich abgeschlossen.",
+    "jpeg_quality_label": "JPEG-Qualität:"
     "error_create_output_folder_msg": "Das Ausgabeverzeichnis konnte nicht erstellt werden: ",
     "error_ffmpeg": "Fehler",
     "language": "Deutsch"
