Add initial project files for VideoConverter application
- Created VideoConverter.spec for application packaging configuration.
- Added config.json to set the default language to Chinese (zh_CN).
- Included a screenshot in Chinese (screenshot-zh_CN.png) for documentation purposes.

--- a/locales/ar_SA.json
+++ b/locales/ar_SA.json
@@ -30,6 +30,6 @@
     "error_no_output_folder_msg": "يرجى تحديد مجلد خروج.",
     "error_create_output_folder": "خطأ",
     "error_create_output_folder_msg": "غير قادر على إنشاء مجلد الخرج: ",
-    "error_ffmpeg": "خطأ"
+    "error_ffmpeg": "خطأ",
+    "language": "العربية"
 }
-{"language": "العربية"}
